# otakumandu-bot

./: .gitignore  aerich.ini  config.py  models.py  pyproject.toml  requirements.txt  tortoise_config.py
bot/: __init__.py  __main__.py  errors.py  utils.py
bot/cogs/: invites.py  welcome.py
migrations/main/: 10_20210808180409_update.sql  4_20210808161126_None.sql  5_20210808161307_update.sql  6_20210808162450_update.sql  7_20210808162531_update.sql  8_20210808162550_update.sql  9_20210808164928_update.sql
